# coeur

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
coeur/: __init__.py  main.py  utils.py
coeur/apps/cmp/: cmp.py  engine.py
coeur/apps/pds/: channels.py  engine.py  pds.py
coeur/apps/ssg/: admin.py  bootstrap.py  build.py  db.py  markdown.py  ssg.py
coeur/apps/ssg/static/admin/: admin.css  admin.js  index.html
coeur/apps/ssg/templates/: base.html  footer.html  header.html  page-item.html  page-navigation.html  page.html  post.html  sitemap.xml
coeur/apps/ssg/templates/static/js/: logic.js
docs/: deploy-github-actions.md  github.yml
docs/migrations-helpers/: 0.0.12.md  migration.py
tests/: build_post_path_test.py
